// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalFooter /> ref should work 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background: #F0F0F0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  class="poodle-box poodle-modal-footer c0"
>
  ModalFooter
</div>
`;

exports[`<ModalFooter /> should render Box props correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background: #F0F0F0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  margin-top: 20px;
}

<div
  class="poodle-box poodle-modal-footer c0"
  id="id"
>
  ModalFooter
</div>
`;

exports[`<ModalFooter /> should render ModalFooter correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background: #F0F0F0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  class="poodle-box poodle-modal-footer c0"
>
  ModalFooter
</div>
`;

exports[`<ModalFooter /> theming should extend styles in global 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background: #F0F0F0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-modal-footer c0"
>
  ModalFooter
</div>
`;

exports[`<ModalFooter /> theming should extend styles in local 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background: #F0F0F0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box poodle-modal-footer c0"
>
  ModalFooter
</div>
`;

exports[`<ModalFooter /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-modal-footer c0"
>
  ModalFooter
</div>
`;

exports[`<ModalFooter /> theming should render with default props correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  background: #F0F0F0;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

<div
  class="poodle-box poodle-modal-footer hello c0"
  id="id"
>
  ModalFooter
</div>
`;
